--- a/docs-src/assets/sass/_tables-symbols.scss
+++ b/docs-src/assets/sass/_tables-symbols.scss
@@ -1,23 +1,23 @@
 .mono,
 .monobold {
-    font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono",
+                Menlo, Courier, monospace;
 }
 .monobold {
-	font-weight: bold;
+  font-weight: bold;
 }
 .R {
-	color: #CC0000; // Original document color
-	// color: #ff0000; // My color variation choice
+  color: #CC0000; // Original document color
+  // color: #ff0000; // My color variation choice
 }
 .B {
-	color: #3333FF; // Original document color
+  color: #3333FF; // Original document color
 }
 .G {
-	color: #37A693; // My color variation choice
-	// color: #339999;  // Original document color
+  color: #37A693; // My color variation choice
+  // color: #339999;  // Original document color
 }
 .X {
-	// color: #996633; // Original document color
-	color: #C28141;
+  // color: #996633; // Original document color
+  color: #C28141;
 }
-
